--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,14 +10,22 @@ jobs:
 
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v3
       - name: setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: 2.7
+          python-version: 3.6
       - name: install requirements
         run: |
           pip install -r requirements.txt
       - name: run cron script
         run: |
           python test.py
+      - name: stage changed files
+        run: git add .
+      - name: commit changed files
+        run: git commit -m "Auto fetch data and update"
+      - name: fetch from master
+        run: git fetch origin master
+      - name: push code to master
+        run: git push origin HEAD:master
