--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -18,6 +18,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.6
+      - name: geckodriver/firefox
+        run: |
+          echo "geckodriver/firefox"
+          which geckodriver
+          geckodriver --version
+          which firefox
+          firefox --version
       - name: install requirements
         run: |
           pip install -r requirements.txt
